Finalise stories section by adding background video. Use video element wrapped in container. Used source element to specify video source files.Use object-fit property to ensure video covers parent container while maintaining aspect-ratio. Make story element slightly transparent to see video through it.Used video element attributes to loop, mute and autoplay.

--- a/natoursproject/sass/pages/_home.scss
+++ b/natoursproject/sass/pages/_home.scss
@@ -61,5 +61,8 @@
 
 .section-stories {
   padding: 15rem 0;
-  background-color: $color-grey-light-1; //tempoary. Will be replaced with video background
+  //Set position relative in order for bg-video container
+  // (the child element) to be placed correctly which uses
+  //absolute positioning.
+  position: relative;
 }
